# slayer

./: Makefile.am  configure  configure.ac
m4/: ax_with_curses.m4  mdl_have_opengl.m4
src/: slayer.cpp  slayert.cpp
src/engine/: asteroid.cpp  console.cpp  entity.cpp  entity.hpp  entitymgr.cpp  entitymgr.hpp  fuego.i  p_plasma.cpp  particles.cpp  path_resolver.cpp  path_resolver.hpp  radar.cpp  renderer.cpp  scoreboard.cpp  sector.cpp  sector.hpp  slayer.cpp  slayer.hpp  slayer.i  texture.cpp  texture.hpp  vector.hpp  video.cpp
